hphp/hack/test/typecheck/like_types/dynamic_coercion/yield_from.php.exp
File "yield_from.php", line 6, characters 3-15:
Invalid yield from (Typing[4110])
File "yield_from.php", line 5, characters 26-31:
Expected string
File "yield_from.php", line 6, characters 3-15:
But got dynamic (result of function with 'yield' in the body)
File "yield_from.php", line 10, characters 11-25:
Invalid foreach (Typing[4110])
File "yield_from.php", line 10, characters 11-25:
Expected Traversable<[unresolved]> because this is used in a foreach statement
File "yield_from.php", line 5, characters 26-31:
But got string
